# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "senpy"
version = "0.1.2"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2021"
description = "The Senpy Club API Wrapper"
documentation = "https://docs.rs/senpy/"
readme = "README.rst"
homepage = "https://github.com/senpy-club/senpy-rs"
repository = "https://github.com/senpy-club/senpy-rs"
license = "GPL-3.0-only"
keywords = ["rust", "anime", "senpy", "senpy-club"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# HTTP
reqwest = { version = "0.11.9", features = ["json", "blocking"] }

# Constant
const_format = "0.2.22"

# Serialization
serde = { version = "1.0.136", features = ["derive"] }
